--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: rspec
-          command: sed -i 's/ruby "[0-9].[0-9].[0-9]"/ruby "3.0.2"/' Gemfile && bundle install && && bundle exec rake db:schema:load RAILS_ENV=test && bundle exec rake db:migrate RAILS_ENV=test && yarn install && bundle exec rake webpacker:compile && bundle exec rspec 
+          command: sed -i 's/ruby "[0-9].[0-9].[0-9]"/ruby "3.0.2"/' Gemfile && bundle install && bundle exec rake db:schema:load RAILS_ENV=test && bundle exec rake db:migrate RAILS_ENV=test && yarn install && bundle exec rake webpacker:compile && bundle exec rspec 
           enviroment: NODE_ENV=test
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
